123-free-download.com (archived on 2017-06-02)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "informationtech",
  "char_count": 3565,
  "classifier_probability": 0.99,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.48,
  "homepage_snapshot_redirected_domain": "123-free-download.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20170405192252id_/http://123-free-download.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20170405192252id_/http%3A//123-free-download.com",
  "interval": "2017_A",
  "link_text": "Privacy policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "123-free-download.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20170602030142id_/http%3A//123-free-download.com/privacy.html",
  "policy_title": "Privacy Policy",
  "policy_url": "123-free-download.com/privacy.html",
  "sha1": "36394d7100785041fef15803e355462c117423ab",
  "simhash": 12601226746476481374,
  "simhash_updated": true,
  "site_hostname": "123-free-download.com",
  "site_url": "http://123-free-download.com",
  "smog": NaN,
  "strict_updated": true,
  "timestamp": "20170602030142",
  "word_count": 584,
  "year": 2017
}

--- a/1/12/123/123-free-download.com.html
+++ b/1/12/123/123-free-download.com.html
@@ -1,108 +1,96 @@
-<!--The following is the downloaded HTML source of the 123-free-download.com privacy policy that was archived on 2016-11-30.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161130070351id_/http%3A//www.123-free-download.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the 123-free-download.com privacy policy that was archived on 2017-06-02.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170602030142id_/http%3A//123-free-download.com/privacy.html) for the most accurate reproduction.-->
 
-<html><head>
-<title>legal disclaimer</title>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-<link href="/main.css" rel="stylesheet" type="text/css">
+<!DOCTYPE html><html><head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+<meta name="viewport" content="width=device-width">
 
-<link href="main.css" rel="stylesheet" type="text/css"></head>
-<body bgcolor="#FFE0BB">
-<center>
-<div class="topBox">
-<img src="http://www.123-free-download.com/images/top.gif">
-</div>
-<div id="main_menu">
-<a href="http://www.123-free-download.com/">Home</a> |
-<a href="http://www.123-free-download.com/devcenter.html">Submit a file</a> |
-<a href="http://www.123-free-download.com/new.html">New</a> |
-<a href="http://www.123-free-download.com/catlist.html">Categories</a> |
-<a href="http://www.123-free-download.com/rss/">RSS Feeds</a> |
-<a href="http://blog.123-free-download.com">Blog</a><br>
-<a href="http://www.123-free-download.com/advex.html"><span class="text_red">Free Software Advertising</span></a><br>
-</div>
-<div class="topBox">
-<div style="float:left; margin:20px 0px 0px 15px;">
-<script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript">
-  addthis_url    = location.href;
-  addthis_title  = document.title;
-  addthis_pub    = '123fd';
-</script><script type="text/javascript" src="http://s7.addthis.com/js/addthis_widget.php?v=12"></script>
-</div>
-<div class="topAddThis">
-<a rel="nofollow" href="http://www.123-free-download.com/follow.html" target="_blank"><img src="http://www.123-free-download.com/images/twitter_button.gif" border="0"></a><br>
-</div></div>
-<div id="break"></div>
-</center><table width="750" border="0" align="center" cellpadding="0" cellspacing="0">
-	<tbody><tr>
-		<td><img src="http://www.123-free-download.com/images/tt_l_t.gif"></td>
-		<td background="http://www.123-free-download.com/images/tt_t.gif" width="100%"><img src="http://www.123-free-download.com/images/icons/ld.gif" align="absmiddle"><span class="win_title">Privacy Policy</span></td>
-		<td><img src="http://www.123-free-download.com/images/tt_r_t.gif"></td>
-	</tr>
-	<tr>
-		<td background="http://www.123-free-download.com/images/tt_l.gif"><img src="http://www.123-free-download.com/images/tt_l.gif"></td>
-		<td bgcolor="#FFFFFF"><br>
-This privacy policy tells you how we use personal information collected at this site. Please read this privacy policy before using the site or submitting any personal information. By using the site, you are accepting the practices described in this privacy policy. You are encouraged to review the privacy policy whenever you visit the site to make sure that you understand how any personal information you provide will be used.<br><br>
-<b>Note:</b> the privacy practices set forth in this privacy policy are for this web site only. If you link to other web sites, please review the privacy policies posted at those sites.<br>
-<br>
-<b>COLLECTION OF INFORMATION</b><br>
-<br>
-We collect personally identifiable information, like names, postal addresses, email addresses, etc., when voluntarily submitted by our software submitters. We may use your e-mail address to notify you of event that may interest you, such as to approve or reject your product.<br><br>
-We use third-party advertising companies to serve ads when you visit our website. These companies may use information (not including your name, address, email address or telephone number) about your visits to this and other websites in order to provide advertisements about goods and services of interest to you. If you would like more information about this practice and would like to know your options in relation to·not having this information used by these companies, click here.
-  <br>
-  <br>
-  <b>USE OF COOKIES</b><br>
-  <br>
-  Cookies are very common on the internet. They are small, inoccuous text files that websites use to remember certain information, or preferences, that you provide. This information is saved on "your" computer's hard drive as a unique id that identifies your browser (not you) when you visit a site that uses cookies. A cookie file can contain information that is useful to site operators for a variety of reasons that serve both the customer and visitor. It may store items like your user ID or other personal information that you supply. A cookie can not read data on your hard disk or read information in cookie files created by other sites. Cookies can be turned off in your browser, but doing so may limit your ability to participate in certain activities provided by a site.<br><br>
-&nbsp;&nbsp;&nbsp;* Google, as a third-party vendor, uses cookies to serve ads on your site.<br>
-&nbsp;&nbsp;&nbsp;* Google's use of the DART cookie enables it to serve ads to your users based on their visit to your sites and other sites on the Internet.<br>
-&nbsp;&nbsp;&nbsp;* Users may opt out of the use of the DART cookie by visiting the <a href="http://www.google.co.uk/privacy_ads.html" target="_blank">Google ad and content network privacy policy</a>. 
-  <br><br>
-  <b>DISTRIBUTION OF INFORMATION</b><br>
-  <br>
-We may share information with governmental agencies or other companies assisting us in fraud prevention or investigation. We may do so when: (1) permitted or required by law; or, (2) trying to protect against or prevent actual or potential fraud or unauthorized transactions; or, (3) investigating fraud which has already taken place. The information is not provided to these companies for marketing purposes.<br>
-  <br>
-  <b>COMMITMENT TO DATA SECURITY</b><br>
-  <br>
-Your personally identifiable information is kept secure. Only authorized employees, agents and contractors (who have agreed to keep information secure and confidential) have access to this information. All emails and newsletters from this site allow you to opt out of further mailings.<br>
-<br>
-  <b>PRIVACY CONTACT INFORMATION</b><br>
-  <br>
-If you have any questions, concerns, or comments about our privacy policy you may contact us using the information below:
-<br><br>
-By e-mail: <script language="JavaScript">document.write("<a href='mailto"+":admin@"+"123-free-download.com'>Click here to contact us.</a>");</script><a href="mailto:admin@123-free-download.com">Click here to contact us.</a>
-<br><br>
-We reserve the right to make changes to this policy without notice.		</td>
-		<td background="http://www.123-free-download.com/images/tt_r.gif"><img src="http://www.123-free-download.com/images/tt_r.gif"></td>
-	</tr>
-	<tr>
-		<td><img src="http://www.123-free-download.com/images/tt_l_b.gif"></td>
-		<td background="http://www.123-free-download.com/images/tt_b.gif"><img src="http://www.123-free-download.com/images/tt_b.gif"></td>
-		<td><img src="http://www.123-free-download.com/images/tt_r_b.gif"></td>
-	</tr>
-</tbody></table><br><br><table width="750" border="1" align="center" cellpadding="5" cellspacing="2" bordercolor="#7BAEE7">
-  <tbody><tr>
-    <td align="right" bordercolor="#7BAEE7" bgcolor="#FFFFFF">
-    <table width="100%" border="0" cellpadding="0" cellspacing="0">
-    <tbody><tr><td>	<a href="http://mp3-audio-c1.123-free-download.com/0/0/0/0.html" class="sm_link">MP3 &amp; Audio</a> |
-	<a href="http://games-c20.123-free-download.com/0/0/0/0.html" class="sm_link">Games</a> |
-	<a href="http://home-desktop-c40.123-free-download.com/0/0/0/0.html" class="sm_link">Home &amp; Desktop</a> |
-	<a href="http://internet-c60.123-free-download.com/0/0/0/0.html" class="sm_link">Internet</a> |
-	<a href="http://multimedia-design-c80.123-free-download.com/0/0/0/0.html" class="sm_link">Multimedia &amp; Design</a> |
-	<a href="http://software-developer-c100.123-free-download.com/0/0/0/0.html" class="sm_link">Software Developer</a> |
-	<a href="http://utilities-c120.123-free-download.com/0/0/0/0.html" class="sm_link">Utilities</a> |
-	<a href="http://web-developer-c140.123-free-download.com/0/0/0/0.html" class="sm_link">Web Developer</a>
-	<br><br>
+<link href="http://fonts.googleapis.com/css?family=Open+Sans:400,600&amp;subset=latin,latin-ext" rel="stylesheet" type="text/css">
 
-	<a href="http://www.123-free-download.com/disclaimer.html" class="common">Legal disclaimer</a> |
-	<a href="http://www.123-free-download.com/privacy.html" class="common">Privacy policy</a>
-	<br>
-    </td><td align="right" valign="bottom">
-    <script language="JavaScript">document.write("<a href='mailto"+":admin@"+"123-free-download.com' class='common'>Mail to site administrator</a>");</script><a href="mailto:admin@123-free-download.com" class="common">Mail to site administrator</a>
- 	
-    </td></tr></tbody></table>
-    </td></tr>
-</tbody></table>
+<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+<!-- script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script -->
+<script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+
+<script type="text/javascript" src="/jslibs.php?common&amp;1047957389"></script>
+<title>Privacy Policy</title>
+<link href="/_templates/default/css/template.css" rel="stylesheet" type="text/css">
+</head>
+<body class="yscroll">
+	<div class="container"><div class="row header-top">
+	<div class="col-lg-12 center">
+		<img src="/_templates/default/images/top.gif" alt="">
+	</div>
+</div>
+
+<div class="row header-menu">
+	<div class="col-lg-12 center">
+		<a href="http://123-free-download.com/">Home</a> |
+		<a href="http://123-free-download.com/devcenter.html">Submit a file</a> |
+		<a href="http://123-free-download.com/new.html">New</a> |
+		<a href="http://123-free-download.com/software-catalog.html">Categories</a> |
+		
+		<a href="http://123-free-download.com/rss/">RSS Feeds</a>
+		<br>
+		<a href="http://123-free-download.com/advex.html" class="text-red">Free Software Advertising</a>
+	</div>
+</div>
+
+<div class="row top-buttons">
+	<div class="top-add-this">
+		<a rel="nofollow" href="http://123-free-download.com/follow.html" target="_blank"><img src="/_templates/default/images/buttons/twitter-button.gif" border="0" alt=""></a>
+	</div>
+</div><div class="row">
+	<div class="blue-frame">
+		<h1 style="background-image: url('http://123-free-download.com/_templates/default/images/icons/privacy.gif'); padding-left: 60px;">Privacy Policy</h1>
+		<div class="white-frame clearfix">
+			<p>This privacy policy tells you how we use personal information collected at this site. Please read this privacy policy before using the site or submitting any personal information. By using the site, you are accepting the practices described in this privacy policy. You are encouraged to review the privacy policy whenever you visit the site to make sure that you understand how any personal information you provide will be used.</p>
+<p><b>Note:</b> the privacy practices set forth in this privacy policy are for this web site only. If you link to other web sites, please review the privacy policies posted at those sites.</p>
+
+<h3>COLLECTION OF INFORMATION</h3>
+<p>We collect personally identifiable information, like names, postal addresses, email addresses, etc., when voluntarily submitted by our software submitters. We may use your e-mail address to notify you of event that may interest you, such as to approve or reject your product.</p>
+<p>We use third-party advertising companies to serve ads when you visit our website. These companies may use information (not including your name, address, email address or telephone number) about your visits to this and other websites in order to provide advertisements about goods and services of interest to you. If you would like more information about this practice and would like to know your options in relation to·not having this information used by these companies, click here.</p>
+<h3>USE OF COOKIES</h3>
+<p>Cookies are very common on the internet. They are small, inoccuous text files that websites use to remember certain information, or preferences, that you provide. This information is saved on "your" computer's hard drive as a unique id that identifies your browser (not you) when you visit a site that uses cookies. A cookie file can contain information that is useful to site operators for a variety of reasons that serve both the customer and visitor. It may store items like your user ID or other personal information that you supply. A cookie can not read data on your hard disk or read information in cookie files created by other sites. Cookies can be turned off in your browser, but doing so may limit your ability to participate in certain activities provided by a site.</p>
+
+<ul>
+	<li>Google, as a third-party vendor, uses cookies to serve ads on your site.</li>
+	<li>Google's use of the DART cookie enables it to serve ads to your users based on their visit to your sites and other sites on the Internet.</li>
+	<li>Users may opt out of the use of the DART cookie by visiting the <a href="http://www.google.co.uk/privacy_ads.html" target="_blank">Google ad and content network privacy policy</a>.</li>
+</ul>
+
+<h3>DISTRIBUTION OF INFORMATION</h3>
+<p>We may share information with governmental agencies or other companies assisting us in fraud prevention or investigation. We may do so when: (1) permitted or required by law; or, (2) trying to protect against or prevent actual or potential fraud or unauthorized transactions; or, (3) investigating fraud which has already taken place. The information is not provided to these companies for marketing purposes.</p>
+
+<h3>COMMITMENT TO DATA SECURITY</h3>
+<p>Your personally identifiable information is kept secure. Only authorized employees, agents and contractors (who have agreed to keep information secure and confidential) have access to this information. All emails and newsletters from this site allow you to opt out of further mailings.</p>
+
+<h3>PRIVACY CONTACT INFORMATION</h3>
+<p>If you have any questions, concerns, or comments about our privacy policy you may contact us using the information below:</p>
+<p>By e-mail: <script language="JavaScript">document.write("<a href='mailto"+":admin@"+"123-free-download.com'>Click here to contact us.</a>");</script><a href="mailto:admin@123-free-download.com">Click here to contact us.</a></p>
+<p>We reserve the right to make changes to this policy without notice.</p>
+		</div>
+	</div>
+</div><div class="row footer">
+	<div class="col-lg-12">
+		<div class="menu">
+			<a href="http://mp3-audio-c1.123-free-download.com/0/0/0/0.html" class="sm_link">MP3 &amp; Audio</a> |
+			<a href="http://games-c20.123-free-download.com/0/0/0/0.html" class="sm_link">Games</a> |
+			<a href="http://home-desktop-c40.123-free-download.com/0/0/0/0.html" class="sm_link">Home &amp; Desktop</a> |
+			<a href="http://internet-c60.123-free-download.com/0/0/0/0.html" class="sm_link">Internet</a> |
+			<a href="http://multimedia-design-c80.123-free-download.com/0/0/0/0.html" class="sm_link">Multimedia &amp; Design</a> |
+			<a href="http://software-developer-c100.123-free-download.com/0/0/0/0.html" class="sm_link">Software Developer</a> |
+			<a href="http://utilities-c120.123-free-download.com/0/0/0/0.html" class="sm_link">Utilities</a> |
+			<a href="http://web-developer-c140.123-free-download.com/0/0/0/0.html" class="sm_link">Web Developer</a>
+		</div>
+		<a href="http://123-free-download.com/disclaimer.html" class="common">Legal disclaimer</a> |
+		<a href="http://123-free-download.com/privacy.html" class="common">Privacy policy</a>
+		<div class="contacts">
+		    <script language="JavaScript">document.write("<a href='mailto"+":admin@"+"123-free-download.com' class='common'>Mail to site administrator</a>");</script><a href="mailto:admin@123-free-download.com" class="common">Mail to site administrator</a>
+		</div>
+	</div>
+</div>
+
 <script type="text/javascript">
   var _gaq = _gaq || [];
   _gaq.push(['_setAccount', 'UA-6673118-5']);
@@ -114,5 +102,6 @@ We reserve the right to make changes to this policy without notice.		</td>
     ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
   })();
-</script>
+</script>	</div>
+
 </body></html>
