--- a/p/po/por/porntelecast.com.html
+++ b/p/po/por/porntelecast.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the porntelecast.com privacy policy that was archived on 2016-11-23.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161123212208id_/http%3A//www.porntelecast.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the porntelecast.com privacy policy that was archived on 2017-06-02.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170602032943id_/http%3A//www.porntelecast.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en" class="ua-headlesschrome ua-headlesschrome-69 ua-headlesschrome-69-0 ua-headlesschrome-69-0-3494 ua-headlesschrome-69-0-3494-0 ua-safari ua-safari-537 ua-safari-537-36 ua-desktop ua-desktop-linux ua-webkit ua-webkit-537 ua-webkit-537-36 js"><head><style class="vjs-styles-defaults">
       .video-js {
@@ -18,7 +18,7 @@
     <link rel="icon" href="/favicon.ico">
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300italic,300,400italic,700,700italic,600,600italic|Asap:400,700,400italic,700italic" rel="stylesheet" type="text/css">
-    <script async="" src="//www.google-analytics.com/analytics.js"></script><script type="text/javascript" async="" defer="" src="https://stat.adultium.com/javascript/aa.js"></script><script async="" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+    <script async="" src="//www.google-analytics.com/analytics.js"></script><script type="text/javascript" async="" defer="" src="https://stat.adultium.com/javascript/aa.js"></script><script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
     <script async="" src="/js/jquery.customForms.js" type="text/javascript"></script>
     <script async="" src="/js/main.js" type="text/javascript"></script>
     
@@ -64,8 +64,9 @@
                 </div>
             </div>
             <div class="nav alpha">
+            
                 <ul>
-                    <li class="selected"><a href="/">Home</a></li>
+                    <li><a href="/">Home</a></li>
                     <li><a href="/latest-updates/">Latest Updates</a></li>
                     <li><a href="/top-rated/">Top Rated</a></li>
                     <li><a href="/most-popular/">Most Popular</a></li>
@@ -153,7 +154,7 @@
                     <li><a href="http://www.porntelecast.com/login.php?action=not_allowed">Upload</a></li>
                 </ul>
 -->                
-                <p>2009-2016 &amp; PornTelecast.com, Porntelecast.com. ALL RIGHTS RESERVED. Reproduction in any form is forbidden.</p>
+                <p>2009-2017 &amp; PornTelecast.com, Porntelecast.com. ALL RIGHTS RESERVED. Reproduction in any form is forbidden.</p>
                 <p>Disclaimer: All models on this website are 18 years or older. PornTelecast.com has a zero-tolerance policy against illegal pornography.</p>
             </div>
         </div>
