--- a/d/do/dow/downforme.org.html
+++ b/d/do/dow/downforme.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the downforme.org privacy policy that was archived on 2016-11-18.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161118174204id_/http%3A//downforme.org/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the downforme.org privacy policy that was archived on 2017-06-02.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170602045809id_/http%3A//downforme.org/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
 <title>Learn More About How We Value Your Online Privacy On Our Website</title>
@@ -118,35 +118,35 @@ var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po
 <div class="desc">Someone Just Searched These Websites!</div>
 <ul>
 <li class="up">
-<a href="/is-stymedx.interiowo.pl-down-today-for-everyone">stymedx.interiowo.pl</a><br>
+<a href="/is-alfaforum.nl-down-today-for-everyone">alfaforum.nl</a><br>
 <span class="status">
 Server is up!
 <span class="time">0 minutes ago</span>
 </span>
 </li>
 <li class="up">
-<a href="/is-www.tepco.co.jp-down-today-for-everyone">www.tepco.co.jp</a><br>
+<a href="/is-istikbaluae.com-down-today-for-everyone">istikbaluae.com</a><br>
 <span class="status">
 Server is up!
 <span class="time">0 minutes ago</span>
 </span>
 </li>
 <li class="up">
-<a href="/is-www.nccc.com.tw-down-today-for-everyone">www.nccc.com.tw</a><br>
+<a href="/is-techaaptak.com-down-today-for-everyone">techaaptak.com</a><br>
 <span class="status">
 Server is up!
 <span class="time">0 minutes ago</span>
 </span>
 </li>
 <li class="up">
-<a href="/is-mydrneil.tumblr.com-down-today-for-everyone">mydrneil.tumblr.com</a><br>
+<a href="/is-obuwie-meskie-ocieplane-trampki-meskie.cenegria.pl-down-today-for-everyone">obuwie-meskie-ocieplane-trampki-meskie.cenegria.pl</a><br>
 <span class="status">
 Server is up!
 <span class="time">0 minutes ago</span>
 </span>
 </li>
 <li class="up">
-<a href="/is-jualobatfiforlifhargamurah.blogspot.co.id-down-today-for-everyone">jualobatfiforlifhargamurah.blogspot.co.id</a><br>
+<a href="/is-abiaar.com-down-today-for-everyone">abiaar.com</a><br>
 <span class="status">
 Server is up!
 <span class="time">0 minutes ago</span>
@@ -160,40 +160,40 @@ Server is up!
 <div class="desc">These Websites Report As Not Working!</div>
 <ul>
 <li class="down">
-<a href="/is-mhlw.go.jp-down-today-for-everyone">mhlw.go.jp</a>
-<span class="time">0 minutes ago</span>
+<a href="/is-peoplesbank.lk-down-today-for-everyone">peoplesbank.lk</a>
+<span class="time">1 minute ago</span>
+</li>
+<li class="down">
+<a href="/is-bancoinbursa.com-down-today-for-everyone">bancoinbursa.com</a>
+<span class="time">1 minute ago</span>
 </li>
 <li class="down">
 <a href="/is-univ-angers.fr-down-today-for-everyone">univ-angers.fr</a>
-<span class="time">0 minutes ago</span>
+<span class="time">1 minute ago</span>
 </li>
 <li class="down">
-<a href="/is-viabcp.com-down-today-for-everyone">viabcp.com</a>
-<span class="time">0 minutes ago</span>
+<a href="/is-hipercard.com.br-down-today-for-everyone">hipercard.com.br</a>
+<span class="time">1 minute ago</span>
 </li>
 <li class="down">
-<a href="/is-customercarenet.com-down-today-for-everyone">customercarenet.com</a>
-<span class="time">0 minutes ago</span>
+<a href="/is-dce.com.cn-down-today-for-everyone">dce.com.cn</a>
+<span class="time">2 minutes ago</span>
 </li>
 <li class="down">
-<a href="/is-cjlu.edu.cn-down-today-for-everyone">cjlu.edu.cn</a>
-<span class="time">0 minutes ago</span>
+<a href="/is-bancacrfirenze.it-down-today-for-everyone">bancacrfirenze.it</a>
+<span class="time">2 minutes ago</span>
 </li>
 <li class="down">
-<a href="/is-bankmelli-iran.com-down-today-for-everyone">bankmelli-iran.com</a>
-<span class="time">0 minutes ago</span>
+<a href="/is-thailandpost.com-down-today-for-everyone">thailandpost.com</a>
+<span class="time">2 minutes ago</span>
 </li>
 <li class="down">
-<a href="/is-rwth-aachen.de-down-today-for-everyone">rwth-aachen.de</a>
-<span class="time">0 minutes ago</span>
+<a href="/is-gateway.gov.uk-down-today-for-everyone">gateway.gov.uk</a>
+<span class="time">5 minutes ago</span>
 </li>
 <li class="down">
-<a href="/is-uni-duesseldorf.de-down-today-for-everyone">uni-duesseldorf.de</a>
-<span class="time">0 minutes ago</span>
-</li>
-<li class="down">
-<a href="/is-synchronycredit.com-down-today-for-everyone">synchronycredit.com</a>
-<span class="time">0 minutes ago</span>
+<a href="/is-cloudfront.net-down-today-for-everyone">cloudfront.net</a>
+<span class="time">5 minutes ago</span>
 </li>
 <li class="more"><a href="/recently-down/">more</a></li>
 </ul>
@@ -226,7 +226,7 @@ DownForMe.org is the best place online to see if a website is down for just you,
 <span style="padding:0 1px">|</span>
 <a href="/terms-of-service/">Terms Of Service</a>
 </div>
-<div class="copyright">© 2011-2016 DownForMe.org - Is It Down Or Not?</div>
+<div class="copyright">© 2011-2017 DownForMe.org - Is It Down Or Not?</div>
 </div></div>
 
 <img src="http://wh.ip-adress.com/c70" alt="" width="1" height="1">
