--- a/q/qu/qui/quiz-maker.com.html
+++ b/q/qu/qui/quiz-maker.com.html
@@ -1,8 +1,8 @@
-<!--The following is the downloaded HTML source of the quiz-maker.com privacy policy that was archived on 2016-11-13.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161113115105id_/https%3A//www.quiz-maker.com/Security-Privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the quiz-maker.com privacy policy that was archived on 2017-06-02.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170602051746id_/https%3A//www.quiz-maker.com/Security-Privacy) for the most accurate reproduction.-->
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html xmlns:mnu="" xmlns:fb="http://www.facebook.com/2008/fbml" xmlns:v="urn:schemas-microsoft-com:vml"><head>	  <link id="base-43-css" href="/styles/3025-base-43-v26.css" rel="stylesheet" type="text/css">
-	  <script async="" src="//www.google-analytics.com/analytics.js"></script><script id="base-43-jss" src="/styles/3025-base-43-v26.js"></script>
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html xmlns:mnu="" xmlns:fb="http://www.facebook.com/2008/fbml" xmlns:v="urn:schemas-microsoft-com:vml"><head>	  <link id="base-43-css" href="/styles/3025-base-43-v9.css" rel="stylesheet" type="text/css">
+	  <script async="" src="//www.google-analytics.com/analytics.js"></script><script id="base-43-jss" src="/styles/3025-base-43-v9.js"></script>
 
 <script>
 	window.onerror = function(msg, url, line){
@@ -326,6 +326,6 @@
 		</div>
 		
 		<div id="fb-root" style="display:none;"></div>
-		<script>try{ulLoad({"id":0,"em":"","nc":0,"un":"","ut":"","fn":"","fb":"","gp":"","tz":0,"pic":"","preaccount":1,"cmonth":-1});}catch(e){}</script>
+		<script>try{ulLoad({"id":0,"em":"","nc":0,"un":"","ut":"","fn":"","fb":"","gp":"","tz":0,"pic":"","preaccount":1,"cmonth":-6});}catch(e){}</script>
 	
 </body></html>
