--- a/a/an/ant/antiwar.com.html
+++ b/a/an/ant/antiwar.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the antiwar.com privacy policy that was archived on 2016-11-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161119030345id_/http%3A//www.antiwar.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the antiwar.com privacy policy that was archived on 2017-06-02.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170602070123id_/http%3A//www.antiwar.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head>
 <title>Privacy Policy - Antiwar.com</title>
@@ -61,11 +61,12 @@ a:hover {
                     </tr>
                     <tr> 
                       <td class="quote"> 
-                        The most successful war seldom pays for its losses.                      </td>
+                        
+Either war is obsolete, or men are.                      </td>
                     </tr>
                     <tr> 
                       <td class="quoteauthor">– 
-                        <a class="quoteauthor" href="https://antiwar.com/quotes.php#499">Thomas Jefferson</a>                      </td>
+                        <a class="quoteauthor" href="https://antiwar.com/quotes.php#294">R. Buckminster Fuller</a>                      </td>
                     </tr>
                     </tbody> 
                   </table>
@@ -316,7 +317,7 @@ a:hover {
 	    <br>
 
 <div class="center"><a href="http://cafepress.com/antiwar">
-        <img src="https://antiwar.com/donate/shop2.gif" width="120" height="100" border="0" alt="antiwar.com shop logo"> 
+        <img src="https://antiwar.com/donate/shop3.gif" width="120" height="100" border="0" alt="antiwar.com shop logo"> 
       </a></div>
 	  <script><!--
 function MM_jumpMenu(targ,selObj,restore){ 
@@ -326,13 +327,13 @@ function MM_jumpMenu(targ,selObj,restore){
 //-->
 </script>
 						<map name="Map">
-        <area shape="rect" coords="4,13,34,24" href="https://antiwar.com/past/20161114.html">
-        <area shape="rect" coords="6,25,32,36" href="https://antiwar.com/past/20161115.html">
-        <area shape="rect" coords="3,34,36,47" href="https://antiwar.com/past/20161116.html">
-        <area shape="rect" coords="98,13,127,24" href="https://antiwar.com/past/20161117.html">
-        <area shape="rect" coords="101,24,128,36" href="https://antiwar.com/past/20161111.html">
-        <area shape="rect" coords="97,35,127,47" href="https://antiwar.com/past/20161112.html">
-        <area shape="rect" coords="50,43,80,55" href="https://antiwar.com/past/20161113.html">
+        <area shape="rect" coords="4,13,34,24" href="https://antiwar.com/past/20170529.html">
+        <area shape="rect" coords="6,25,32,36" href="https://antiwar.com/past/20170530.html">
+        <area shape="rect" coords="3,34,36,47" href="https://antiwar.com/past/20170531.html">
+        <area shape="rect" coords="98,13,127,24" href="https://antiwar.com/past/20170601.html">
+        <area shape="rect" coords="101,24,128,36" href="https://antiwar.com/past/20170526.html">
+        <area shape="rect" coords="97,35,127,47" href="https://antiwar.com/past/20170527.html">
+        <area shape="rect" coords="50,43,80,55" href="https://antiwar.com/past/20170528.html">
         <area shape="rect" coords="11,55,119,67" href="https://antiwar.com/past">
       </map><script type="text/javascript">
 var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
@@ -389,7 +390,7 @@ pageTracker._trackPageview();
     <td valign="top"> 
    <div align="center" class="bottom"> <p>Reproduction of material from any original Antiwar.com pages<br>
         without written permission is strictly prohibited.<br>
-        Copyright 2016 <a href="http://www.antiwar.com">Antiwar.com</a></p>
+        Copyright 2017 <a href="http://www.antiwar.com">Antiwar.com</a></p>
         
       </div>   
     </td>
