--- a/g/ga/gar/gardenia.net.html
+++ b/g/ga/gar/gardenia.net.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the gardenia.net privacy policy that was archived on 2016-11-10.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161110155124id_/https%3A//www.gardenia.net/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the gardenia.net privacy policy that was archived on 2017-06-02.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170602073937id_/https%3A//www.gardenia.net/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en"><!--<![endif]--><head>
   <title>Privacy</title>    <!-- title tag pulled from CMS -->
@@ -36,7 +36,7 @@
 
 
    <!-- page-specific CSS -->
-  <script async="" src="//www.googletagmanager.com/gtm.js?id=GTM-M9GLLZ"></script><script type="text/javascript" async="" src="https://d31qbv1cthcecs.cloudfront.net/atrk.js"></script><script async="" src="//www.google-analytics.com/analytics.js"></script><script type="text/javascript">
+  <script async="" src="//widgets.getsitecontrol.com/73682/script.js"></script><script async="" src="//www.googletagmanager.com/gtm.js?id=GTM-M9GLLZ"></script><script type="text/javascript" async="" src="https://d31qbv1cthcecs.cloudfront.net/atrk.js"></script><script async="" src="//www.google-analytics.com/analytics.js"></script><script type="text/javascript">
   // Google Analytics
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -49,7 +49,9 @@
   //
   //
   
+</script>
 
+<script type="text/javascript">
 
   // Start Alexa Certify Javascript
   _atrk_opts = { atrk_acct:"oKtNi1a4ZP00gW", domain:"gardenia.net",dynamic: true};
@@ -477,6 +479,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <p><em>Jardins Sans Secret, 210 East 61st street, New York, NY 10065, USA</em></p>
 </div>
 <!-- end code region pod_2971394 -->
+                
               </section>
             </div>
             <div class="col-sm-3 col-md-2 col-lg-2 body-right">
@@ -709,8 +712,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             <ul class="list-unstyled">
               <!--li id="loginButton"><a id="loginButton" href="/merchants/login">Merchant Login</a></li-->
               <li id="loginButton"><a href="/merchants/home">Merchant Login</a></li>
-              <li id="merchantHomeButton"><a href="/merchants/home">My Merchant Home</a></li>
-              <li id="updateProfileButton"><a href="/merchants/update">Edit My Profile</a></li>
+              <li id="merchantHomeButton"><a href="/merchants/home">Merchant Home</a></li>
+              <!--li id="updateProfileButton"><a href="/merchants/update">Edit My Profile</a></li-->
               <li id="logoutButton"><a href="/logout">Logout</a></li>
             </ul>
           </li>
@@ -733,7 +736,7 @@ function googleTranslateElementInit() {
     <div class="row">
       <div class="col-xs-12">
         <ul class="list-inline">
-          <li>© 2016 Gardenia.net</li>
+          <li>© 2017 Gardenia.net</li>
           <li><a href="/privacy">Privacy</a></li>
           <li><a href="/terms-and-conditions">Terms &amp; Conditions</a></li>
           <li class="last">Created with Webvanta <a target="_blank" href="//www.webvanta.com">Cloud CMS for Database-Driven Sites</a></li>
@@ -857,6 +860,11 @@ function googleTranslateElementInit() {
 <!-- Go to www.addthis.com/dashboard to customize your tools -->
 <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-553e4e203eb755c8" async="async"></script>
 
+
+<script>
+  (function (w,i,d,g,e,t,s) {w[d] = w[d]||[];t= i.createElement(g);t.async=1;t.src=e;s=i.getElementsByTagName(g)[0];s.parentNode.insertBefore(t, s);
+  })(window, document, '_gscq','script','//widgets.getsitecontrol.com/73682/script.js');
+</script>
 
 
    <!-- page-specific JS -->
