--- a/m/my/myo/myownfreehost.net.html
+++ b/m/my/myo/myownfreehost.net.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the myownfreehost.net privacy policy that was archived on 2016-11-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161119015932id_/http%3A//www.myownfreehost.net/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the myownfreehost.net privacy policy that was archived on 2017-06-02.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170602095851id_/http%3A//myownfreehost.net/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html xmlns="http://www.w3.org/1999/xhtml"><!--<![endif]--><head>
 	
