--- a/t/ti/tin/tinnitusmiracle.com.html
+++ b/t/ti/tin/tinnitusmiracle.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the tinnitusmiracle.com privacy policy that was archived on 2016-11-26.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161126062934id_/http%3A//tinnitusmiracle.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the tinnitusmiracle.com privacy policy that was archived on 2017-06-02.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170602105158id_/http%3A//www.tinnitusmiracle.com/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head><title>Tinnitus Miracle™ - Privacy</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
