--- a/p/pa/pal/palermospizza.com.html
+++ b/p/pa/pal/palermospizza.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the palermospizza.com privacy policy that was archived on 2016-12-28.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161228102153id_/http%3A//www.palermospizza.com/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the palermospizza.com privacy policy that was archived on 2017-06-02.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170602120721id_/http%3A//www.palermospizza.com/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en-US" class="dyn detail-page contents js flexbox canvas canvastext webgl no-touch geolocation postmessage websqldatabase indexeddb hashchange history draganddrop websockets rgba hsla multiplebgs backgroundsize borderimage borderradius boxshadow textshadow opacity cssanimations csscolumns cssgradients cssreflections csstransforms csstransforms3d csstransitions fontface generatedcontent video audio localstorage sessionstorage webworkers applicationcache svg inlinesvg smil svgclippaths" ng-app="palermosApp" style=""><head>
     <meta charset="utf-8">
@@ -7,7 +7,7 @@
     <title>Palermo's Pizza - Palermo's Pizza - Privacy Policy</title>
     <meta name="com.silverpop.brandeddomains" content="www.pages03.net,northernground.mkt7164.com,www.palermospizza.com,www.screaminsicilian.com">
     <meta name="com.silverpop.cothost" content="pod3.ibmmarketingcloud.com">
-    <script async="" src="//www.google-analytics.com/analytics.js"></script><script src="https://script.crazyegg.com/pages/scripts/0019/0176.js?439020" async="" type="text/javascript"></script><script async="" src="//connect.facebook.net/en_US/fbevents.js"></script><script async="" src="//www.googletagmanager.com/gtm.js?id=GTM-K76Z84"></script><script src="http://contentz.mkt932.com/lp/static/js/iMAWebCookie.js?25fa290b-14e045caf44-b9e6bcd68d4fb511170ab3fcff55179d&amp;h=www.pages03.net" type="text/javascript"></script>
+    <script async="" src="//www.google-analytics.com/analytics.js"></script><script src="https://script.crazyegg.com/pages/scripts/0019/0176.js?439020" async="" type="text/javascript"></script><script async="" src="//www.googletagmanager.com/gtm.js?id=GTM-K76Z84"></script><script async="" src="https://connect.facebook.net/en_US/fbevents.js"></script><script src="http://contentz.mkt932.com/lp/static/js/iMAWebCookie.js?25fa290b-14e045caf44-b9e6bcd68d4fb511170ab3fcff55179d&amp;h=www.pages03.net" type="text/javascript"></script>
     <link href="/Themes/Palermos/Styles/normalize.css" rel="stylesheet" type="text/css">
 <link href="/Themes/Palermos/Styles/main.css" rel="stylesheet" type="text/css">
 <script src="//ajax.aspnetcdn.com/ajax/jQuery/jquery-1.9.1.js" type="text/javascript"></script>
@@ -33,8 +33,29 @@
             a.async = true; a.type = "text/javascript"; b.parentNode.insertBefore(a, b)
         }, 1);
     </script>
+	
+	<!-- Facebook Pixel Code -->
+  <script>
+    !function (f, b, e, v, n, t, s) {
+      if (f.fbq) return; n = f.fbq = function () {
+        n.callMethod ?
+        n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+      }; if (!f._fbq) f._fbq = n;
+      n.push = n; n.loaded = !0; n.version = '2.0'; n.queue = []; t = b.createElement(e); t.async = !0;
+      t.src = v; s = b.getElementsByTagName(e)[0]; s.parentNode.insertBefore(t, s)
+    }(window,
+    document, 'script', 'https://connect.facebook.net/en_US/fbevents.js');
+    fbq('init', '1058558284254383'); // Insert your pixel ID here.
+    fbq('track', 'PageView');
+  </script>
+  <!-- DO NOT MODIFY -->
+  <!-- End Facebook Pixel Code -->
+  
 </head>
 <body>
+  <noscript>
+    <img height="1" width="1" style="display:none" src="https://www.facebook.com/tr?id=1058558284254383&ev=PageView&noscript=1" />
+  </noscript>
     <!-- Google Tag Manager -->
     <noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-K76Z84"
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
@@ -58,31 +79,12 @@
     var axel = Math.random() + "";
     var a = axel * 10000000000000;
     document.write('<iframe src="http://4666910.fls.doubleclick.net/activityi;src=4666910;type=retar0;cat=homep0;ord=' + a + '?" width="1" height="1" frameborder="0" style="display:none"></iframe>');
-  </script><iframe src="http://4666910.fls.doubleclick.net/activityi;src=4666910;type=retar0;cat=homep0;ord=7491235477842.373?" width="1" height="1" frameborder="0" style="display:none"></iframe>
+  </script><iframe src="http://4666910.fls.doubleclick.net/activityi;src=4666910;type=retar0;cat=homep0;ord=1205040896239.5642?" width="1" height="1" frameborder="0" style="display:none"></iframe>
   <noscript>
     <iframe src="http://4666910.fls.doubleclick.net/activityi;src=4666910;type=retar0;cat=homep0;ord=1?" width="1" height="1" frameborder="0" style="display:none"></iframe>
   </noscript>
   <!-- End of DoubleClick Floodlight Tag: Please do not remove -->
-
-    <!-- Facebook Pixel Code -->
-    <script>
-        !function (f, b, e, v, n, t, s) {
-            if (f.fbq) return; n = f.fbq = function () {
-                n.callMethod ?
-                n.callMethod.apply(n, arguments) : n.queue.push(arguments)
-            }; if (!f._fbq) f._fbq = n;
-            n.push = n; n.loaded = !0; n.version = '2.0'; n.queue = []; t = b.createElement(e); t.async = !0;
-            t.src = v; s = b.getElementsByTagName(e)[0]; s.parentNode.insertBefore(t, s)
-        }(window,
-        document, 'script', '//connect.facebook.net/en_US/fbevents.js');
-
-        fbq('init', '184072141961939');
-        fbq('track', "PageView");</script>
-    <noscript>
-        <img height="1" width="1" style="display:none" src="https://www.facebook.com/tr?id=184072141961939&ev=PageView&noscript=1" />
-    </noscript>
-    <!-- End Facebook Pixel Code -->
-
+  
     
     
 
@@ -162,7 +164,7 @@
                 <li><a href="/about-us/social-mission" class="sub-item">Social Mission</a></li>
                 <li><a href="/about-us/careers" class="sub-item">Careers</a></li>
                 <li><a href="/about-us/tours" class="sub-item">Tour</a></li>
-                <li><a href="/about-us/pizzeria-store" class="sub-item">Pizzeria 3301</a></li>
+                <li><a href="/3301" class="sub-item">Pizzeria 3301</a></li>
                 <li><a href="/about-us/news" class="sub-item">News &amp; Events</a></li>
                 <li><a href="/about-us/history" class="sub-item">History</a></li>
                 <li><a href="/contact-us" class="sub-item">Contact Us</a></li>
@@ -197,7 +199,7 @@
                   <li><a href="/about-us/social-mission">Social Mission</a></li>
                   <li><a href="/about-us/careers">Careers</a></li>
                   <li><a href="/about-us/tours">Tours</a></li>
-                  <li><a href="/about-us/pizzeria-store">Pizzeria 3301</a></li>
+                  <li><a href="/3301">Pizzeria 3301</a></li>
                   <li><a href="/about-us/news">News &amp; Events</a></li>
                   <li><a href="/about-us/history">History</a></li>
                   <li><a href="/contact-us">Contact Us</a></li>
@@ -379,7 +381,7 @@
                     <li class="first">Contact Us</li>
                     <li><a href="/contact-us">Contact Us</a></li>
                     <li><a href="/about-us/tours">Tours</a></li>
-                    <li class="copyright last">© 2016 Palermo Villa, Inc.</li>
+                    <li class="copyright last">© 2017 Palermo Villa, Inc.</li>
                 </ul>
                 <div class="wheat-hr--dark"></div>
             </nav>
@@ -389,7 +391,7 @@
                     <li><a href="/about-us/news">News &amp; Events</a></li>
                     <li><a href="http://palermosgraphics.com/" target="_blank">Asset Manager</a></li>
                     <li class="terms last"><a href="/sitemap">Site Map</a><a href="/privacy-policy">Privacy Policy</a><a href="/terms-conditions">Terms &amp; Conditions</a></li>
-                    <li class="mobile-copyright">© 2016 Palermo Villa, Inc.</li>
+                    <li class="mobile-copyright">© 2017 Palermo Villa, Inc.</li>
                 </ul>
             </nav>
         </article>
@@ -403,8 +405,8 @@
 </div>
 
 	<script src="/Themes/Palermos/Scripts/plugins.min.js"></script>
-    <script src="/Themes/Palermos/Scripts/main.min.js?v=20161019"></script>
-    <script src="/Themes/Palermos/Scripts/app.min.js?v=20160620"></script>
+    <script src="/Themes/Palermos/Scripts/main.min.js?v=20170511-2"></script>
+    <script src="/Themes/Palermos/Scripts/app.min.js?v=20170511-1"></script>
     <script src="/Core/Shapes/scripts/base.js" type="text/javascript"></script>
 
     <script>
