--- a/t/ty/ty./ty.com.html
+++ b/t/ty/ty./ty.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the ty.com privacy policy that was archived on 2016-11-20.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161120165632id_/http%3A//ty.com/Privacy.cfm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the ty.com privacy policy that was archived on 2017-06-02.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170602132505id_/http%3A//www.ty.com/Privacy.cfm) for the most accurate reproduction.-->
 
 <html><head><title>Privacy Policy</title>
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
