--- a/a/al/all/allcompanydata.com.html
+++ b/a/al/all/allcompanydata.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the allcompanydata.com privacy policy that was archived on 2016-12-01.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161201021827id_/http%3A//allcompanydata.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the allcompanydata.com privacy policy that was archived on 2017-06-02.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170602142855id_/http%3A//www.allcompanydata.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html><head>
 <link href="/static/css/layout.css" rel="stylesheet" type="text/css" media="all">
