--- a/n/no/noj/nojitter.com.html
+++ b/n/no/noj/nojitter.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the nojitter.com privacy policy that was archived on 2016-12-27.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161227173321id_/http%3A//legal.us.ubm.com/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the nojitter.com privacy policy that was archived on 2017-06-02.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170602155431id_/http%3A//legal.us.ubm.com/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xmlns:og="http://ogp.me/ns#" xmlns:fb="http://www.facebook.com/2008/fbml" itemscope="" itemtype="http://schema.org/Event"><head>
 <title>UBM - UBM LLC Privacy Policy</title>
@@ -11,7 +11,7 @@
 <!-- Stylesheets -->
 <link href="/css/main.css" rel="stylesheet" type="text/css" media="All">
 <!-- Javascripts -->
-<script type="text/javascript" src="/js/jquery.js" language="javascript"></script><script type="text/javascript" src="/js/global.js" language="javascript"></script>
+<script type="text/javascript" async="" src="//img.en25.com/i/elqCfg.min.js"></script><script type="text/javascript" src="/js/jquery.js" language="javascript"></script><script type="text/javascript" src="/js/global.js" language="javascript"></script>
 <style type="text/css">
 .titleContent {
 	cursor:pointer;
@@ -207,7 +207,7 @@
 
 <h1>UBM LLC Privacy Policy</h1>
 
-<p>Last Updated: December 6, 2016</p>
+<p>Last Updated: April 25, 2017</p>
 
 
 <h2>Scope</h2>
@@ -260,7 +260,7 @@
 	
 	<li>Register for one of our virtual events with our exhibitor(s). We may give all exhibitors at the event your name and contact details and we may give the exhibitor(s) whose booths and resources you accessed a record of your visit(s) to the exhibitorâ€™s booth, including your interactions with the content from that exhibitor.</li>
 	
-	<li>Attend one of our face-to-face events. An event attendance list may be given to all exhibitors at the event.  It is up to you, however, to decide whether to leave your business card or allow your badge to be read by a particular exhibitor. Badges cannot be read remotely. A sponsor of a special, sponsored conference session will also be given information about you if you choose to attend that company's session. Your future interaction with online content from an exhibitor or sponsor to whom you provided your contact data to may also be tracked and disclosed to that exhibitor or sponsor.</li>
+	<li>Attend one of our face-to-face events. An event attendance list may be given to all exhibitors at the event.  It is up to you, however, to decide whether to leave your business card or allow your badge to be read by a particular exhibitor. Badges cannot be read remotely. If you allow your badge to be read by a particular exhibitor, we will share certain information about your use and enjoyment of our sites, including webinar participation, white papers downloaded, and clicks to our proprietary articles, and information about what sessions you attended at our event. A sponsor of a special, sponsored conference session will also be given information about you if you choose to attend that company's session. Your future interaction with online content from an exhibitor or sponsor to whom you provided your contact data to may also be tracked and disclosed to that exhibitor or sponsor.</li>
 </ul>
 
 <p>We may also disclose information about you to other third parties, including, for example, vendors that work on our behalf, law enforcement or other entities in order to respond to court orders or valid subpoenas, or to protect human safety or our networks or property, and third parties as part of a merger or sale of some or all of our business assets.</p>
@@ -393,10 +393,10 @@ New York, New York, 10121</p>
     </div>
     <div id="footer-container">
       <div id="credential">
-        <p>© UBM 2016</p>
+        <p>© UBM 2017</p>
       </div>
       <div id="footermenu">
-        <ul><li><a href="https://web.archive.org/web/20161227173321id_/https://legal.us.ubm.com/privacy-policy/?view=mobile">Mobile Site</a></li>
+        <ul><li><a href="https://web.archive.org/web/20170602155431id_/https://legal.us.ubm.com/privacy-policy/?view=mobile">Mobile Site</a></li>
           <li><a href="http://ubm.com/site-services/privacy.aspx?view=mobile">Mobile Site</a></li>
           <li><a href="http://ubm.com/about-ubm/contact-us.aspx">Contact UBM</a></li>
           <li><a href="http://ubm.com/site-services/disclaimer.aspx">Disclaimer</a></li>
@@ -413,14 +413,30 @@ New York, New York, 10121</p>
   </div>
 
 
-<script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
-<script type="text/javascript">
-var pageTracker = _gat._getTracker("UA-4596830-1");
-pageTracker._initData();
-pageTracker._trackPageview();
-</script>
+  <script type="text/javascript">
+    var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+    document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+  </script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
+  <script type="text/javascript">
+    var pageTracker = _gat._getTracker("UA-4596830-1");
+    pageTracker._initData();
+    pageTracker._trackPageview();
+  </script>
+  
+  <script type="text/javascript">
+    var _elqQ = _elqQ || [];
+    _elqQ.push(['elqSetSiteId', '2150']);
+    _elqQ.push(['elqTrackPageView']);
+    
+    (function () {
+        function async_load() {
+            var s = document.createElement('script'); s.type = 'text/javascript'; s.async = true;
+            s.src = '//img.en25.com/i/elqCfg.min.js';
+            var x = document.getElementsByTagName('script')[0]; x.parentNode.insertBefore(s, x);
+        }
+        if (window.addEventListener) window.addEventListener('DOMContentLoaded', async_load, false);
+        else if (window.attachEvent) window.attachEvent('onload', async_load); 
+    })();
+  </script>
 
 </body></html>
