mma-core.com (archived on 2017-06-02)
{
  "alexa_rank": 24678,
  "analysis_subcorpus": true,
  "categories": "entertainment;sports",
  "char_count": 1900,
  "classifier_probability": 0.95,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.36,
  "homepage_snapshot_redirected_domain": "mma-core.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20170217095056id_/https://www.mma-core.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20170217095056id_/http%3A//mma-core.com",
  "interval": "2017_A",
  "link_text": "Privacy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "mma-core.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20170602164026id_/https%3A//www.mma-core.com/privacy",
  "policy_title": "Privacy Policy - MMA-Core.com",
  "policy_url": "mma-core.com/privacy",
  "sha1": "2188cbc36fefafa552cdbb121d09295a46d9f82d",
  "simhash": 12032693313695946823,
  "simhash_updated": true,
  "site_hostname": "mma-core.com",
  "site_url": "http://mma-core.com",
  "smog": NaN,
  "strict_updated": true,
  "timestamp": "20170602164026",
  "word_count": 328,
  "year": 2017
}

--- a/m/mm/mma/mma-core.com.html
+++ b/m/mm/mma/mma-core.com.html
@@ -1,67 +1,42 @@
-<!--The following is the downloaded HTML source of the mma-core.com privacy policy that was archived on 2016-12-10.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161210014555id_/http%3A//www.mma-core.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the mma-core.com privacy policy that was archived on 2017-06-02.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170602164026id_/https%3A//www.mma-core.com/privacy) for the most accurate reproduction.-->
 
-<!DOCTYPE html><html xmlns="http://www.w3.org/1999/xhtml"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, maximum-scale=1.0, minimum-scale=1.0, intitial-scale=1.0"><script async="" src="//www.google-analytics.com/analytics.js"></script><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script async="" src="//ajax.cloudflare.com/cdn-cgi/nexp/dok3v=088620b277/cloudflare.min.js"></script><script type="text/javascript">
+<!DOCTYPE html><html><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, maximum-scale=1.0, minimum-scale=1.0, initial-scale=1.0"><script async="" src="//www.google-analytics.com/analytics.js"></script><script async="" src="//ajax.cloudflare.com/cdn-cgi/nexp/dok3v=85b614c0f6/cloudflare.min.js"></script><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript">
 //<![CDATA[
-try{if (!window.CloudFlare) {var CloudFlare=[{verbose:0,p:0,byc:0,owlid:"cf",bag2:1,mirage2:0,oracle:0,paths:{cloudflare:"/cdn-cgi/nexp/dok3v=1613a3a185/"},atok:"c2b8ff38fe1c7b919ec683459b43cbf4",petok:"723f1892c8ec31bac27e139f952d067579bef6f8-1481334355-1800",zone:"mma-core.com",rocket:"0",apps:{"ga_key":{"ua":"UA-4708401-1","ga_bs":"2"}}}];!function(a,b){a=document.createElement("script"),b=document.getElementsByTagName("script")[0],a.async=!0,a.src="//ajax.cloudflare.com/cdn-cgi/nexp/dok3v=088620b277/cloudflare.min.js",b.parentNode.insertBefore(a,b)}()}}catch(e){};
+var _gaq = _gaq || [];_gaq.push(['_setAccount', 'UA-4708401-1']);_gaq.push(['_trackPageview']);(function() {var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);})();(function(b){(function(a){"__CF"in b&&"DJS"in b.__CF?b.__CF.DJS.push(a):"addEventListener"in b?b.addEventListener("load",a,!1):b.attachEvent("onload",a)})(function(){"FB"in b&&"Event"in FB&&"subscribe"in FB.Event&&(FB.Event.subscribe("edge.create",function(a){_gaq.push(["_trackSocial","facebook","like",a])}),FB.Event.subscribe("edge.remove",function(a){_gaq.push(["_trackSocial","facebook","unlike",a])}),FB.Event.subscribe("message.send",function(a){_gaq.push(["_trackSocial","facebook","send",a])}));"twttr"in b&&"events"in twttr&&"bind"in twttr.events&&twttr.events.bind("tweet",function(a){if(a){var b;if(a.target&&a.target.nodeName=="IFRAME")a:{if(a=a.target.src){a=a.split("#")[0].match(/[^?=&]+=([^&]*)?/g);b=0;for(var c;c=a[b];++b)if(c.indexOf("url")===0){b=unescape(c.split("=")[1]);break a}}b=void 0}_gaq.push(["_trackSocial","twitter","tweet",b])}})})})(window);//]]>
+</script><script type="text/javascript">
+//<![CDATA[
+try{if (!window.CloudFlare) {var CloudFlare=[{verbose:0,p:0,byc:0,owlid:"cf",bag2:1,mirage2:0,oracle:0,paths:{cloudflare:"/cdn-cgi/nexp/dok3v=1613a3a185/"},atok:"b0bb36a75860ee5b76cdc4a4619df820",petok:"10988b97d79e0c65f64f33a6879fe40abe6f4e7e-1496421627-1800",zone:"mma-core.com",rocket:"0",apps:{"ga_key":{"ua":"UA-4708401-1","ga_bs":"2"}}}];!function(a,b){a=document.createElement("script"),b=document.getElementsByTagName("script")[0],a.async=!0,a.src="//ajax.cloudflare.com/cdn-cgi/nexp/dok3v=85b614c0f6/cloudflare.min.js",b.parentNode.insertBefore(a,b)}()}}catch(e){};
 //]]>
 </script>
-<link rel="publisher" href="https://plus.google.com/+mmacore">
+<link rel="icon" href="https://www.mma-core.com/favicon.ico" type="image/x-icon">
 <meta name="description" content="This is MMA-Core.com privacy policy for the visitors and users of this website.">
-<meta itemprop="name" content="Privacy Policy - MMA-Core.com">
-<meta itemprop="description" content="This is MMA-Core.com privacy policy for the visitors and users of this website.">
+<meta property="og:type" content="website">
 <title>
 Privacy Policy - MMA-Core.com
 </title>
-<script type="text/javascript" src="/jq030002.js"></script>
-<link rel="stylesheet" type="text/css" media="only screen and (min-width:0px) and (max-width:550px)" href="/pub/sml030002.css">
-<link rel="stylesheet" type="text/css" media="only screen and (min-width:551px) and (max-width:870px)" href="/pub/med030002.css">
-<link rel="stylesheet" type="text/css" media="only screen and (min-width:871px)" href="/pub/lrg030002.css">
-<link rel="stylesheet" type="text/css" href="/jqui030002.css">
+<link rel="publisher" href="https://plus.google.com/+mmacore">
+<link rel="search" type="application/opensearchdescription+xml" href="https://www.mma-core.com/opensearch" title="MMA-Core Search">
+<link rel="stylesheet" type="text/css" media="only screen" href="/pub/lrg043424.css">
 <script>
-        var unruly = window.unruly || {};
-        unruly.native = unruly.native || {};
-        unruly.native.siteId = 52193;
-    </script>
-<script src="//video.unrulymedia.com/native/native-loader.js"></script>
-<script async="" src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<script>
-        (adsbygoogle = window.adsbygoogle || []).push({
-            google_ad_client: "ca-pub-5755576192768698",
-            enable_page_level_ads: true
-        });
-    </script>
-<script type="text/javascript">
-/* <![CDATA[ */
-var _gaq = _gaq || [];
-_gaq.push(['_setAccount', 'UA-4708401-1']);
-_gaq.push(['_trackPageview']);
-
-(function() {
-var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-})();
-
-(function(b){(function(a){"__CF"in b&&"DJS"in b.__CF?b.__CF.DJS.push(a):"addEventListener"in b?b.addEventListener("load",a,!1):b.attachEvent("onload",a)})(function(){"FB"in b&&"Event"in FB&&"subscribe"in FB.Event&&(FB.Event.subscribe("edge.create",function(a){_gaq.push(["_trackSocial","facebook","like",a])}),FB.Event.subscribe("edge.remove",function(a){_gaq.push(["_trackSocial","facebook","unlike",a])}),FB.Event.subscribe("message.send",function(a){_gaq.push(["_trackSocial","facebook","send",a])}));"twttr"in b&&"events"in twttr&&"bind"in twttr.events&&twttr.events.bind("tweet",function(a){if(a){var b;if(a.target&&a.target.nodeName=="IFRAME")a:{if(a=a.target.src){a=a.split("#")[0].match(/[^?=&]+=([^&]*)?/g);b=0;for(var c;c=a[b];++b)if(c.indexOf("url")===0){b=unescape(c.split("=")[1]);break a}}b=void 0}_gaq.push(["_trackSocial","twitter","tweet",b])}})})})(window);
-/* ]]> */
-</script>
+            var unruly = window.unruly || {};
+            unruly.native = unruly.native || {};
+            unruly.native.siteId = 52193;
+        </script>
+<script async="" src="//video.unrulymedia.com/native/native-loader.js"></script>
 </head>
 <body>
-<form method="post" action="./privacy" id="mfrm">
-<div class="aspNetHidden">
-<input type="hidden" name="__VIEWSTATE" id="__VIEWSTATE" value="Lx3m/vaE5+vrHyYZFrwFPHOpxJcPRl6aen0SbGMSXQvHZIK7vqhyeErHL7ExWk5l1PK+VsDrQEIyiLLWSAoDTqc4ZIxfeF0T25jqGx/V2BI=">
-</div>
-<div class="aspNetHidden">
-<input type="hidden" name="__VIEWSTATEGENERATOR" id="__VIEWSTATEGENERATOR" value="A67DD359">
-</div>
 <header>
 <div id="hdwrp">
 <a class="logo" href="/"></a>
 <nav id="rnav">
 <ul>
 <li class="fb"><a href="//www.facebook.com/mmacoredotcom"></a></li>
+<li class="gp"><a href="//plus.google.com/+mmacore"></a></li>
 <li class="twt"><a href="//www.twitter.com/mmacoredotcom"></a></li>
+<li class="tbr"><a href="//mma-core.tumblr.com"></a></li>
+<li class="itg"><a href="//instagram.com/mma_core"></a></li>
+<li class="yt"><a href="//www.youtube.com/channel/UCU1uJXSAlDAm3Xw_3f0h5Jw"></a></li>
 <li>
 <input type="text" id="srchbx" onkeypress="return searchRedir(event.keyCode,$(this));">
 </li>
@@ -93,7 +68,11 @@ var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga
 <li class="pnlmnu"><a href="/create_account">Create Account</a></li>
 <li class="pnlmnu">&nbsp;</li>
 <li class="pnlmnu"><a href="//www.facebook.com/mmacoredotcom">Facebook</a></li>
+<li class="pnlmnu"><a href="//plus.google.com/+mmacore">Google Plus</a></li>
 <li class="pnlmnu"><a href="//www.twitter.com/mmacoredotcom">Twitter</a></li>
+<li class="pnlmnu"><a href="//mma-core.tumblr.com">Tumblr</a></li>
+<li class="pnlmnu"><a href="//instagram.com/mma_core">Instagram</a></li>
+<li class="pnlmnu"><a href="//www.youtube.com/channel/UCU1uJXSAlDAm3Xw_3f0h5Jw">Youtube</a></li>
 <li class="pnlmnu">&nbsp;</li>
 <li class="pnlmnu2"><a href="/about">About</a></li>
 <li class="pnlmnu2"><a href="/contact">Contact</a></li>
@@ -109,25 +88,19 @@ var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga
 </header>
 <div id="pgwrp">
 <div class="trndtgs">
-<span><a href="/search/UFC_206">#UFC 206</a></span>
+<span><a href="/search/Alexander_Gustafsson">#Alexander Gustafsson</a></span>
+<span><a href="/search/Fight_Night_Stockholm">#Fight Night Stockholm</a></span>
+<span><a href="/search/Glover_Teixeira">#Glover Teixeira</a></span>
+<span><a href="/search/Joe_Stevenson">#Joe Stevenson</a></span>
+<span><a href="/search/Justin_Edwards">#Justin Edwards</a></span>
 <span><a href="/search/Conor_McGregor">#Conor McGregor</a></span>
-<span><a href="/search/Anthony_Pettis">#Anthony Pettis</a></span>
-<span><a href="/search/Matt_Brown">#Matt Brown</a></span>
-<span><a href="/search/Nate_Diaz">#Nate Diaz</a></span>
-<span><a href="/search/Donald_Cerrone">#Donald Cerrone</a></span>
-<span><a href="/search/Ronda_Rousey">#Ronda Rousey</a></span>
+<span><a href="/search/UFC_212">#UFC 212</a></span>
+<span><a href="/search/Jose_Aldo">#Jose Aldo</a></span>
 <span><a href="/search/Max_Holloway">#Max Holloway</a></span>
-<span><a href="/search/UFC_205">#UFC 205</a></span>
+<span><a href="/search/Jon_Jones">#Jon Jones</a></span>
 <span><a href="/search/Diaz_vs._McGregor_2">#Diaz vs. McGregor 2</a></span>
-<span><a href="/search/TUF_24_Finale">#TUF 24 Finale</a></span>
-</div>
-<div id="tlbrd">
-<script async="" src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
- 
-<ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-5755576192768698" data-ad-slot="8172670599" data-ad-format="auto"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<span><a href="/search/Nate_Diaz">#Nate Diaz</a></span>
+<span><a href="/search/Frankie_Edgar">#Frankie Edgar</a></span>
 </div>
 <section>
 <h1>MMA-Core.com Privacy Policy</h1>
@@ -144,10 +117,7 @@ We can be reached via e-mail at support@mma-core.com or by using this <a href="/
 With respect to Ad Servers: To try and bring you offers that are of interest to you, we have relationships with other companies that we allow to place ads on our Web pages. As a result of your visit to our site, ad server companies may collect information such as your domain type, your IP address and clickstream information. For further information, consult the privacy policies of:
 </p>
 <ul>
-<li>http://corp.mode.com/privacy/</li>
-<li>http://www.google.com/policies/privacy/</li>
-<li>http://technoratimedia.com/privacy-policy/</li>
-<li>http://www.media-strike.com/</li>
+<li>https://www.google.com/policies/privacy/</li>
 </ul>
 <p>From time to time, we may use user information for new, unanticipated uses not previously disclosed in our privacy notice. If our information practices change at some time in the future we will post the policy changes to our Web site to notify you of these changes and provide you with the ability to opt out of these new uses. If you are concerned about how your information is used, you should check this privacy policy page periodically.</p>
 <p>Customers may prevent their information from being used for purposes other than those for which it was originally collected by e-mailing us at the above address.</p>
@@ -164,24 +134,24 @@ With respect to Ad Servers: To try and bring you offers that are of interest to 
 <a href="/privacy">Privacy</a>
 <a href="/dmca">DMCA</a>
 </nav>
-<div id="cpy">Combat-Core LLC © 2016</div>
+<div id="cpy">MMA-Core.com © 2017</div>
 </footer>
 </div>
-<script type="text/javascript" src="/utls030002.js"></script>
+<script src="/jq043424.js"></script>
+<script src="/utls043424.js"></script>
 <script>
-            (function (i, s, o, g, r, a, m) {
-                i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
-                    (i[r].q = i[r].q || []).push(arguments)
-                }, i[r].l = 1 * new Date(); a = s.createElement(o),
-                m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
-            })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+        (function (i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date(); a = s.createElement(o),
+            m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
-            ga('create', 'UA-4708401-1', 'auto');
-            ga('require', 'displayfeatures');
-            ga('send', 'pageview');
+        ga('create', 'UA-4708401-1', 'auto');
+        ga('require', 'displayfeatures');
+        ga('send', 'pageview');
 
-        </script>
-</form>
+    </script>
 
 
 </body></html>
